# bluprint

./: .buildinfo  .gitignore  .pdm-python  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _README.md  configuration.html  custom_templates.html  genindex.html  getting_started.html  index.html  indexing.html  mypy.ini  objects.inv  plan.md  prod_notebooks.html  prod_projects.html  pyproject.toml  reference.html  searchindex.js  setup.cfg  setup__.cfg  sitemap.xml  test.ipynb  versions_python.html  versions_r.html
.doctrees/: configuration.doctree  custom_templates.doctree  environment.pickle  getting_started.doctree  index.doctree  indexing.doctree  prod_notebooks.doctree  prod_projects.doctree  reference.doctree  versions_python.doctree  versions_r.doctree
.github/actions/install-python/: action.yml
.github/actions/install-r/: Rprofile.site  action.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish-to-pypi.yml  unit-tests.yml
_sources/: configuration.rst.txt  custom_templates.rst.txt  reference.rst.txt  versions_python.rst.txt
bluprint/: binary.py  capture_output.py  cli.py  colors.py  config.py  create.py  create_project.py  demo.py  errors.py  index.py  notebook.py  placeholder.py  project.py  r_project.py  test.py  workflow.py  yaml.py
bluprint/create/: errors.py  py_project.py  r_project.py
bluprint/data/: folder.py
bluprint/notebook/: jupyter.py  progress.py  quarto.py  rmarkdown.py
conf/: build.yaml  config.yaml  data.yaml
data/: ab.csv  test2.csv
data/a_and_b/: a_and_b_transformed.csv  summarized.csv
data/basic/: test_data.csv
data/basic/third_level/: test_third.csv
data/raw/: table1.csv
data/transformed/: table2.csv
demo/: .gitignore  .pdm-python  install.sh  pyproject.toml
demo/conf/: config.yaml  data.yaml  workflow.yaml
demo/notebooks/: example_jupyternb.ipynb  example_notebook.ipynb  example_rmarkdown.Rmd
demo/project/: example.py
docs/: Makefile  requirements.txt
docs/gh-pages/: index.html
docs/source/: alignment_table.csv  conf.py  configuration.rst  custom_templates.rst  data_index.rst  getting_started.rst  index.rst  indexing.rst  notebook_linting.rst  notebook_version_control.rst  packaging_projects.rst  prod_notebooks.rst  prod_projects.rst  python_versions.rst  r_versions.rst  tutorial.rst  unit_testing.rst  versions_python.rst  versions_r.rst  workflows.rst
docs/source/_static/css/: custom.css
src/bluprint/: binary.py  cli.py  colors.py  config.py  demo.py  errors.py  index.py  project.py  template.py  workflow.py
src/bluprint/create/: errors.py  py_project.py  r_project.py  template_setup.py
src/bluprint/demo/: .pdm-python
src/bluprint/demo/notebooks/: example_jupyternb.ipynb
src/bluprint/notebook/: jupyter.py  progress.py  quarto.py  rmarkdown.py
src/bluprint/template/: .gitignore  README.md  pyproject.toml
src/bluprint/template/conf/: config.yaml
src/bluprint/template/notebooks/: example_jupyternb.ipynb  example_quarto.qmd  example_rmarkdown.Rmd
src/bluprint/template/placeholder_name/: example.py
tests/: conftest.py  test.yaml
tests/binary/: test_binary.py
tests/config/: test_config_yaml.py  test_data_yaml.py  test_paths.py
tests/config/fixtures/: data.yaml
tests/config/fixtures/confs/: first.yaml  second.yml
tests/config/fixtures/data_confs/: data1.yaml  data2.yaml
tests/config/snapshots/: first_and_second.yaml  parsed_data.yaml  prefixed_test.yaml
tests/create/: test_create.py  test_create_py.py  test_create_r.py  test_python_version.py
tests/demo/: test_demo.py
tests/index/: test_index.py
tests/index/snapshots/: data.yaml
tests/init/: test_init_project.py
tests/project/: test_project.py  test_template.py
tests/project/fixtures/example_dst/: file1.txt
tests/project/fixtures/example_dst/files/: file3.txt
tests/project/fixtures/example_src/files/: file4.txt
tests/version/: test_version.py
tests/workflow/: conftest.py  test_workflow.py
tests/workflow/fixtures/: test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  workflows.yaml
tests/workflow/fixtures/rtest/: test5.Rmd  test6.Rmd
tests/workflow/fixtures/xtest/: test3.ipynb  test4.ipynb
tests/yaml/: test_yaml.py
tests/yaml/fixtures/: test.yaml
tmp/: build.yaml  test.ipynb
tmp/notebooks/: testing.ipynb
tmp/notebooks/a_and_b/: plot.ipynb  preprocess.ipynb  summarize.ipynb
tmp/tmp2/: abc.yaml  test.ipynb  test.yaml  test1.ipynb  test2.ipynb  wf_test.py  workflow.ipynb  workflows.yaml  xtest1.ipynb  xtest2.ipynb
tmp/tmp3/: dagu_test.yaml
