[project]
name = "placeholder_name"
version = "0.1.0"
description = ""
authors = [
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools]
packages = ["conf", "data", "placeholder_name"]

[tool.pdm]
distribution = true
