[project]
name = "{{placeholder_name}}"
version = "0.1.0"
description = ""
authors = [
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["conf", "data", "{{placeholder_name}}"]
